--- a/global.css
+++ b/global.css
@@ -43,7 +43,7 @@ header {
     margin: 0px;
     padding-top: 25px;
     padding-left: 15px;
-    color: rgb(193, 193, 226);
+    color: rgb(255, 255, 255);
 }
 
 .link {
@@ -51,6 +51,7 @@ header {
     padding: 25px;
     margin-left: 20px;
     text-decoration: none;
+    color: rgb(30, 144, 255);
 }
 
 nav > .link:hover {
@@ -125,8 +126,11 @@ nav > .link:hover {
 }
 
 .carl {
+    padding-top: 450px;
+    padding-bottom: 450px;
     text-decoration: none;
-    text-align: center;font-size: 35px;
+    text-align: center;
+    font-size: 35px;
     color: rgb(0, 255, 242);
 }
 
